# pyamigamods

./: MANIFEST.in  build.py  build_utils.py  pyproject.toml  setup.py
audacious-uade-extras/: player.cc  precalc.cc
build_utils/: build_utils.py
pyamigamods/: loadlibs.py  player.py  precalc.py
setuptools/_vendor/packaging/: LICENSE.audacious-uade  LICENSE.libxmp  LICENSE.openmpt  LICENSE.uade
test/: player_test.py  precalc_test.py
test/mods/: STK.bowlstheme  astaroth-game.ymst
tests/: player_test.py  precalc_test.py  uade_test.py
