[build-system]
requires = ["hatchling", "setuptools", "wheel"]
build-backend = "hatchling.build"

[project]
name = "pyamigamods"
version = "0.1.0"
description = "stuff for amiga based on audacious-uade,libopenmpt,libxmp"
authors = [
    { name = "Loic Devaux", email = "devloic@gmail.com" }
]
readme = "README.md"
keywords = ["amiga","mods","audacious-uade","uade", "libopenmpt", "libxmp"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Programming Language :: C",
]

dependencies = [
    "cffi",
    "sounddevice",
    "pyaudio",
    "watchfiles"
]

[project.urls]
Homepage = "https://github.com/devloic/pyamigamods"
Issues = "https://github.com/devloic/pyamigamods/issues"

readme = "README.md"

[tool.hatch.build]
include = ["pyamigamods"]
exclude = ["build"]

[tool.hatch.build.hooks.custom]
path = "build.py"
